# rust-grpc-server-demo

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
proto/user/v1/: user.proto
proto/weather/v1/: weather.proto
src/: lib.rs  main.rs  server.rs  store.rs  user.rs  validate.rs  weather.rs
