[package]
name = "rust-grpc-server-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
prost = "0.14.1"
proto-types = "0.1.11"
protocheck = "0.1.11"
tokio = { version = "1.48.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"
tonic-web = "0.14.2"
uuid = { version = "1", features = ["v4"] }
rand = "0.9.2"

[build-dependencies]
prost = "0.14.1"
prost-types = "0.14.1"
protocheck-build = "0.1.11"
tonic-prost-build = "0.14.2"
